--- a/Module 4/Controlling and Accelerating Convergence.Rmd
+++ b/Module 4/Controlling and Accelerating Convergence.Rmd
@@ -69,7 +69,8 @@ $$
 \begin{aligned}
 Cov(e^U, e^{1-U}) & = E[e^U e^{1-U}] - E[e^U] E[e^{1-U}] \\
 \ & = E[e^1] - (e - 1) E[e^{1-U}] \\
-\ & = E[e^1] - (e - 1) E[e^1 e^{-U}] = e - (e - 1) e^1 [\frac{e - 1}{e}] \\
+\ & = E[e^1] - (e - 1) E[e^1 e^{-U}] \\
+\ & = e - (e - 1) e^1 [\frac{e - 1}{e}] \\
 \ & = e - (e - 1)^2 = -0.23421 \\
 \end{aligned}
 $$
@@ -79,7 +80,8 @@ Var(e^U + e^{1-U}) & = var(e^u) + var(e^{1-U}) + 2 Cov(e^U, e^{1-U}) \\
 \ &= E[e^{2U}] - E[e^U]^2 + E[e^{2-2U}] - E[e^{1-U}]^2 + 2 Cov(e^U, e^{1-U}) \\
 \ &= \frac{e^2 - 1}{2} - (e-1)^2 + E[e^2 e^{-2U}] - E[e^1 e^{-U}]^2 + 2 Cov(e^U, e^{1-U}) \\
 \ &= \frac{e^2 - 1}{2} - (e-1)^2 +  \frac{e^2 - 1}{2} - (e - 1)^2 + 2 Cov(e^U, e^{1-U}) \\
-\ &= -1 - 2 (e-1)^2 + e^2 + 2 Cov(e^U, e^{1-U}) = -1 - 2 (e-1)^2 + e^2 + 2 (-0.23421) \\
+\ &= -1 - 2 (e-1)^2 + e^2 + 2 Cov(e^U, e^{1-U}) \\
+\ &= -1 - 2 (e-1)^2 + e^2 + 2 (-0.23421) \\
 \ & = 0.0156512 \\
 \end{aligned}
 $$
@@ -153,7 +155,8 @@ $$
 Cov(X, X') & = a^2 Cov(U, 1-U) \to a^2 E[U(1-U)] - E[U] E[1-U] \\
 \ & = a^2 E[U - U^2] - (1/2)(1/2) \to a^2 (E[U] - E[U^2] - 1/4) \\
 \ & = a^2 (1/2 - E[U^2] - 1/4) \to a^2 (1/4 - E[U^2]) \\
-\ & = a^2 (1/4 - 4/12) = a^2 (-1/12) \\
+\ & = a^2 (1/4 - 4/12) \\
+\ & = a^2 (-1/12) \\
 \end{aligned}
 $$
 
