--- a/Module 4/Controlling and Accelerating Convergence.Rmd
+++ b/Module 4/Controlling and Accelerating Convergence.Rmd
@@ -64,6 +64,9 @@ print(cor(U1, U2))
 
 ###Exercise 5.6
 
+Compute $Cov(e^U, e^{1-U})$ and $Var(e^U, e^{1-U})$ where $U \sim Unif(0,1)$. What is the percent reduction in variance of $\hat{\theta}$ that can be acheived using antithetic variates?
+
+
 Covariance:
 $$
 \begin{aligned}
@@ -74,6 +77,8 @@ Cov(e^U, e^{1-U}) & = E[e^U e^{1-U}] - E[e^U] E[e^{1-U}] \\
 \ & = e - (e - 1)^2 = -0.23421 \\
 \end{aligned}
 $$
+
+And variance:
 $$
 \begin{aligned}
 Var(e^U + e^{1-U}) & = var(e^u) + var(e^{1-U}) + 2 Cov(e^U, e^{1-U}) \\
@@ -176,55 +181,5 @@ curve(expr = dbeta(x, 2, 2), from = 0, to = 1, main = "symmetric Beta(2,2)")
 U = rbeta(1000, 2, 2)
 cor(U, 1-U)
 ```
-
-
-
-###Execise 6.4
-
-```{r}
-set.seed(5)
-m = 20
-LN_mu = function(m = 20, mu = 2, sigma = 4) {
-  X = rlnorm(m, meanlog = mu, sdlog = sigma)
-  CI = t.test(log(X), mu = mu, conf.level = 0.95)
-  return(c(CI$conf.int[1], CI$conf.int[2]))
-}
-
-ConfIntervals = matrix(replicate(n = 1000, expr = LN_mu()), nrow = 1000, byrow = TRUE)
-
-successes = sum((ConfIntervals[,1] < 2) & (2 < ConfIntervals[,2]))
-## proportion of successes
-mean((ConfIntervals[,1] < 2) & (2 < ConfIntervals[,2]))
-
-
-```
-
-
-
-
-###Exercise 6.5
-
-
-
-```{r}
-set.seed(5)
-LN_mu2 = function(m = 20, mu=2) {
-  X = rchisq(m, df = 2) ## data is now Chisquare(2)
-  CI = t.test(X, mu = mu, conf.level = 0.95)
-  return(c(CI$conf.int[1], CI$conf.int[2]))
-}
-
-ConfIntervals = matrix(replicate(n = 1000, expr = LN_mu2()), nrow = 1000, byrow = TRUE)
-
-successes = sum((ConfIntervals[,1] < 2) & (2 < ConfIntervals[,2]))
-## proportion of successes
-mean((ConfIntervals[,1] < 2) & (2 < ConfIntervals[,2])) 
-
-  
-```  
-  
-
-
-We see that the result for when the data originates from a non-Normal distribution results in a lower rate of success than when the data is more appropriately Normal, like in Exercise 6.4.
 
 
