--- a/Module 5/Monte Carlo Optimization.Rmd
+++ b/Module 5/Monte Carlo Optimization.Rmd
@@ -37,7 +37,7 @@ Let $X_1, ... , X_M$ be the (unobserved) lifetimes for the second experiment, an
 $$
 \begin{aligned}
 \displaystyle L(\theta| X,Y) & = \prod^N_{i=1} \frac{1}{\theta} e^{y_i/\theta} \times \prod^M_{i=1} \frac{1}{\theta} e^{x_i/\theta}   \\
-\ & = \displaystyle \theta^{-N} e^{N \bar{y} / \theta} \times \theta^{-M} e^{\sum^M_{i=1} x_i / \theta }  \\
+\ & = \displaystyle \theta^{-N} e^{-N \bar{y} / \theta} \times \theta^{-M} e^{-\sum^M_{i=1} x_i / \theta }  \\
 \end{aligned}
 $$
 
@@ -45,16 +45,29 @@ And log-likelihood is obtained by
 
 $$
 \begin{aligned}
-log(L(\theta)) & = \displaystyle N \times log(\theta) + N \bar{y}/\theta + M \times log(\theta) + \sum^M_{i=1} x_i / \theta  \\
-\ & = \displaystyle N ( log(\theta) + \bar{y}/\theta ) + M \times log(\theta) + \sum^M_{i=1} x_i / \theta  \\
+log(L(\theta)) & = \displaystyle -N \times log(\theta) - N \bar{y}/\theta - M \times log(\theta) + \sum^M_{i=1} x_i / \theta  \\
+\ & = \displaystyle -N ( log(\theta) + \bar{y}/\theta ) - M \times log(\theta) + \sum^M_{i=1} x_i / \theta  \\
 \end{aligned}
 $$
 
+Or as written by Flury and Zoppe,
 
-(1)
 $$
 log^c(L(\theta|\mathcal{Y,X})) = -N(log(\theta) + \bar{Y}/\theta) - \sum_{i=1}^M(log(\theta) + X_i/\theta ) 
 $$ 
+
+The next step, is to take the expectation of $log(L(\theta))$ with respect to observed data.
+
+$$
+\begin{aligned}
+E[log(L(\theta)) | \mathcal{Y},\mathcal{X}] & = E[-N(log(\theta) + \bar{Y}/\theta) - \sum_{i=1}^M(log(\theta) + X_i/\theta ) | \mathcal{Y},\mathcal{X}] \\
+\ & = -N(log(\theta) + \bar{Y}/\theta) - E[\sum_{i=1}^M(log(\theta) + X_i/\theta ) | \mathcal{Y},\mathcal{X}]   \\
+\ & = -N(log(\theta) + \bar{Y}/\theta) - M \times log(\theta) + E[\frac{1}{\theta}  \sum_{i=1}^M X_i | \mathcal{Y},\mathcal{X}]   \\
+\ & = -N(log(\theta) + \bar{Y}/\theta) - M \times log(\theta) + \frac{1}{\theta} \sum_{i=1}^M E[X_i | \mathcal{Y},\mathcal{X}]   \\
+\ & = -N(log(\theta) + \bar{Y}/\theta) - M \times log(\theta) + \frac{1}{\theta} \sum_{i=1}^M E[X_i | E_i]   \\
+\end{aligned}
+$$
+
 
 > which is linear for unobserved $X_i$. But
 
@@ -66,6 +79,73 @@ E[X_i | \mathcal{Y}] = E[X_i | E_i] =
     \theta - t \frac{e^{-t/\theta}}{1 - e^{-t/\theta}}  & \quad \text{if } E_i = 0\\
   \end{cases} 
 $$ 
+
+For the first case, $E_i = 1$, so
+$$
+\begin{aligned}
+E[x_i | x_i > t] & = E[x_i + t] \\
+\ & = t + E[x_i] \\
+\ & = t + \theta \\
+\end{aligned}
+$$
+
+For the second case, $E_i = 0$, then
+$$
+\begin{aligned}
+\displaystyle \int_0^t P(X_i > x | X_i < t) \ dx & = \int_0^t \frac{P(x < X_i < t)}{P(X_i < t)} \ dx \\
+\end{aligned}
+$$
+
+For the denominator, we get
+$$
+\begin{aligned}
+P(X_i < t) & = \int_0^t \frac{1}{\theta} e^{- x_i / \theta} dx \\
+\ & = \frac{1}{\theta} (-\theta e^{- x_i / \theta}) |^t_0 \\
+\ & = 1 - e^{- t / \theta}
+\end{aligned}
+$$
+
+and for the numerator we obtain
+$$
+\begin{aligned}
+P(x < X_i < t) & = \int_x^t \frac{1}{\theta} e^{- x_i / \theta} dx \\
+\ & = \frac{1}{\theta} (-\theta e^{- x_i / \theta}) |^t_0 \\
+\ & = e^{- x / \theta} - e^{- t / \theta}
+\end{aligned}
+$$
+
+Altogether, we obtain
+$$
+\begin{aligned}
+\displaystyle \int_0^t P(X_i > x | X_i < t) \ dx & = \int_0^t \frac{P(x < X_i < t)}{P(X_i < t)} \ dx \\
+\ & = \displaystyle \int_0^t \frac{e^{- x / \theta} - e^{- t / \theta}}{(1 - e^{-t/\theta})} \ dx \\
+\ & = \displaystyle \frac{1}{(1 - e^{-t/\theta})} \int_0^t (e^{- x / \theta} - e^{- t / \theta}) \ dx \\
+\ & = \displaystyle \frac{1}{(1 - e^{-t/\theta})}  (\int_0^t e^{- x / \theta} - \int_0^te^{- t / \theta} \ dx) \\
+\ & = \displaystyle \frac{1}{(1 - e^{-t/\theta})}  (\theta (1 - e^{-t/\theta}) - x\times e^{- t / \theta} |_0^t) \\
+\ & = \displaystyle   \theta - t\times \frac{e^{- t / \theta}}{1 - e^{-t/\theta}}  \\
+\end{aligned}
+$$
+
+If we plug in the conditional expected values
+$$
+E[X_i | \mathcal{Y}] = E[X_i | E_i] = 
+\begin{cases}
+    t + \theta       & \quad \text{if } E_i = 1\\
+    \theta - t \frac{e^{-t/\theta}}{1 - e^{-t/\theta}}  & \quad \text{if } E_i = 0\\
+  \end{cases} 
+$$
+into the log-likelihood, we will obtain
+
+$$
+\begin{aligned}
+\log(L(\theta)) & = \displaystyle -N ( log(\theta) + \bar{y}/\theta ) - M \times log(\theta) + \sum^M_{i=1} x_i / \theta  \\
+\ & = \displaystyle -N \times log(\theta) - N \bar{y}/\theta  - M \times log(\theta) + \sum^M_{i=1} x_i / \theta  \\
+\ & = \displaystyle -( N + M)  \times log(\theta) - N \bar{y}/\theta + \sum^M_{i=1} x_i / \theta  \\
+\ & = \displaystyle -( N + M)  \times log(\theta) - \frac{1}{\theta} (N \bar{y} + \sum^M_{i=1} x_i )  \\
+\ & = -(N + M) log(\theta) - \frac{1}{\theta} [N \bar{Y} + Z ( t + \theta) + (M - Z) (\theta - t \times \frac{e^{- t / \theta}}{1 - e^{-t/\theta}})] \\
+\end{aligned}
+$$
+
 
 > and therefore the $j$th step consists of replacing $X_i$ in (1) by its expected value (2), using the current numerical parameter value $\theta^{(j-1)}$. The result is
 
